--- a/src/Panels/templates/eloquent_orm.panel.phtml
+++ b/src/Panels/templates/eloquent_orm.panel.phtml
@@ -23,7 +23,7 @@ $data = $this->getInfo();
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->title ?> <?= $data['count'] ?>/<?= $data['time'] ?></h1>
+<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?> <?= $data['count'] ?>/<?= $data['time'] ?></h1>
 
 <div class="tracy-inner tracy-EloquentOrm">
     <div class="tracy-inner-container">
