--- a/src/Panels/templates/php_info.panel.phtml
+++ b/src/Panels/templates/php_info.panel.phtml
@@ -104,7 +104,7 @@ use Jwebas\Debugger\Panels\PhpInfoPanel;
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->title ?></h1>
+<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?></h1>
 
 <div class="tracy-inner tracy-InfoPanel">
     <div class="tracy-inner-container">
