--- a/src/Panels/templates/slim_router.panel.phtml
+++ b/src/Panels/templates/slim_router.panel.phtml
@@ -17,7 +17,7 @@ use Jwebas\Debugger\Panels\SlimRouterPanel;
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->title ?></h1>
+<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?></h1>
 
 <div class="tracy-inner tracy-SlimRouterPanel">
     <div class="tracy-inner-container">
