--- a/src/Panels/templates/slim_response.panel.phtml
+++ b/src/Panels/templates/slim_response.panel.phtml
@@ -16,7 +16,7 @@ use Jwebas\Debugger\Panels\SlimResponsePanel;
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->title ?></h1>
+<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?></h1>
 
 <div class="tracy-inner tracy-SlimResponsePanel">
     <div class="tracy-inner-container">
