Added option to show/hide panel title in bar. Updated panels templates.

--- a/src/Panels/templates/eloquent_orm/panel.phtml
+++ b/src/Panels/templates/eloquent_orm/panel.phtml
@@ -1,11 +1,7 @@
-<?php
+<?php declare(strict_types=1);
 
-use Jwebas\Debugger\Panels\EloquentOrmPanel;
-
-/** @var EloquentOrmPanel $this */
-
-$data = $this->getInfo();
-
+/** @var string $panelTitle */
+/** @var array $data */
 ?>
 
 <!--suppress CssUnusedSymbol -->
@@ -23,7 +19,7 @@ $data = $this->getInfo();
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?> <?= $data['count'] ?>/<?= $data['time'] ?></h1>
+<h1><?= $panelTitle ?> <?= $data['count'] ?>/<?= $data['time'] ?></h1>
 
 <div class="tracy-inner tracy-EloquentOrm">
     <div class="tracy-inner-container">
