--- a/src/Panels/templates/slim_router/panel.phtml
+++ b/src/Panels/templates/slim_router/panel.phtml
@@ -1,9 +1,12 @@
-<?php
+<?php declare(strict_types=1);
 
-use Jwebas\Debugger\Panels\SlimRouterPanel;
+use Jwebas\Debugger\Panels\Abstracts\AbstractPanel;
+use Slim\Route;
 
-/** @var SlimRouterPanel $this */
-/** @var Slim\Route $route */
+/** @var $this AbstractPanel */
+/** @var Route $route */
+/** @var string $panelTitle */
+/** @var array $data */
 
 ?>
 
@@ -17,7 +20,7 @@ use Jwebas\Debugger\Panels\SlimRouterPanel;
     }
 </style>
 
-<h1><?= $this->getIcon() ?> <?= $this->getTitle() ?></h1>
+<h1><?= $panelTitle ?></h1>
 
 <div class="tracy-inner tracy-SlimRouterPanel">
     <div class="tracy-inner-container">
@@ -36,7 +39,7 @@ use Jwebas\Debugger\Panels\SlimRouterPanel;
             </tr>
             </thead>
             <tbody>
-            <?php foreach ($this->getData()['routes'] as $route): ?>
+            <?php foreach ($data['routes'] as $route): ?>
                 <tr>
                     <td class="r1"><?= $route->getIdentifier() ?></td>
                     <td class="r2"><?= $route->getName() ?></td>
@@ -59,7 +62,7 @@ use Jwebas\Debugger\Panels\SlimRouterPanel;
             </tr>
             </thead>
             <tbody>
-            <?php foreach ($this->getData()['items'] as $title => $value): ?>
+            <?php foreach ($data['items'] as $title => $value): ?>
                 <tr>
                     <td class="e"><?= $title ?></td>
                     <td class="v"><?= $this->toHtml($value) ?></td>
@@ -68,7 +71,7 @@ use Jwebas\Debugger\Panels\SlimRouterPanel;
             </tbody>
         </table>
 
-        <div><?= $this->toHtml($this->getData()['full']) ?></div>
+        <div><?= $this->toHtml($data['full']) ?></div>
 
     </div>
 </div>
