--- a/resources/css/tracy.css
+++ b/resources/css/tracy.css
@@ -7,6 +7,11 @@
     padding       : 1px 0 1px 0 !important;
 }
 
+#tracy-debug .tracy-mode-peek,
+#tracy-debug .tracy-mode-float:not(.tracy-panel-resized) {
+    max-width : 760px !important;
+}
+
 #tracy-debug h1 {
     max-width      : 100% !important;
     padding-right  : 35px !important;
@@ -65,4 +70,67 @@
 
 #tracy-debug-bar ul li {
     padding : 0 1px;
+}
+
+table.tracy-table .e {
+    background-color : #f4f3f1 !important;
+}
+
+#tracy-debug-bar a[rel=tracy-debug-panel-php] svg {
+    height : 21px;
+    width  : 25px;
+}
+
+#tracy-debug-bar a[rel=tracy-debug-panel-slim] svg {
+    height : 21px;
+    width  : 30px;
+}
+
+/*TABS*/
+section#tracy-tabs {
+    display           : -webkit-flex;
+    display           : flex;
+    -webkit-flex-wrap : wrap;
+    flex-wrap         : wrap;
+}
+
+section#tracy-tabs label {
+    background  : #eee;
+    border      : 1px solid #ddd;
+    padding     : .7em 1em;
+    cursor      : pointer;
+    z-index     : 1;
+    margin-left : -1px;
+    font-size   : 16px;
+}
+
+section#tracy-tabs label svg {
+    vertical-align : bottom;
+    width          : 1.23em;
+    height         : 1.55em;
+}
+
+section#tracy-tabs label:first-of-type {
+    margin-left : 0;
+}
+
+section#tracy-tabs div.panel-content {
+    width         : 100%;
+    margin-top    : -1px;
+    padding       : 1em;
+    border        : 1px solid #ddd;
+    order         : 1;
+}
+
+section#tracy-tabs input[type=radio], div.panel-content {
+    display : none;
+}
+
+section#tracy-tabs input[type=radio]:checked + label {
+    background    : #fff;
+    border-bottom : 1px solid #fff;
+}
+
+section#tracy-tabs input[type=radio]:checked + label + div.panel-content {
+    display : block;
 }
