--- a/src/Panels/templates/jwebas_config/panel.phtml
+++ b/src/Panels/templates/jwebas_config/panel.phtml
@@ -1,42 +1,32 @@
 <?php declare(strict_types=1);
 
-use Jwebas\Debugger\Panels\Abstracts\AbstractPanel;
-
-/** @var $this AbstractPanel */
-/** @var string $panelTitle */
+/** @var \Jwebas\Debugger\Support\Panel $this */
 /** @var array $data */
 
 ?>
-
 <style class="tracy-debug">
-    .tracy-ConfigPanel table.tracy-table .e {
+    table.tracy-table.table-jwebasConfig .e {
         width : 100px;
     }
 
-    .tracy-ConfigPanel table.tracy-table .v {
+    table.tracy-table.table-jwebasConfig .v {
         max-width : 560px;
     }
 </style>
 
-<h1><?= $panelTitle ?></h1>
-
-<div class="tracy-inner tracy-ConfigPanel">
-    <div class="tracy-inner-container">
-        <table class="tracy-table tracy-sortable">
-            <thead>
-            <tr>
-                <th>Key</th>
-                <th>Value</th>
-            </tr>
-            </thead>
-            <tbody>
-            <?php foreach ($data as $title => $value): ?>
-                <tr>
-                    <td class="e"><?= $title ?></td>
-                    <td class="v"><?= $this->toHtml($value) ?></td>
-                </tr>
-            <?php endforeach; ?>
-            </tbody>
-        </table>
-    </div>
-</div>
+<table class="tracy-table tracy-sortable table-jwebasConfig">
+    <thead>
+    <tr>
+        <th>Key</th>
+        <th>Value</th>
+    </tr>
+    </thead>
+    <tbody>
+    <?php foreach ($data as $title => $value): ?>
+        <tr>
+            <td class="e"><?= $title ?></td>
+            <td class="v"><?= $this->toHtml($value) ?></td>
+        </tr>
+    <?php endforeach; ?>
+    </tbody>
+</table>
