--- a/resources/css/tracy.css
+++ b/resources/css/tracy.css
@@ -86,6 +86,11 @@ table.tracy-table .e {
     width  : 30px;
 }
 
+#tracy-debug-bar a[rel=tracy-debug-panel-symfony] svg {
+    height : 21px;
+    width  : 60px;
+}
+
 /*TABS*/
 section#tracy-tabs {
     display           : -webkit-flex;
@@ -115,11 +120,11 @@ section#tracy-tabs label:first-of-type {
 }
 
 section#tracy-tabs div.panel-content {
-    width         : 100%;
-    margin-top    : -1px;
-    padding       : 1em;
-    border        : 1px solid #ddd;
-    order         : 1;
+    width      : 100%;
+    margin-top : -1px;
+    padding    : 1em;
+    border     : 1px solid #ddd;
+    order      : 1;
 }
 
 section#tracy-tabs input[type=radio], div.panel-content {
